--- a/css/demo.css
+++ b/css/demo.css
@@ -11,6 +11,7 @@ body{
 	background-image: url('../img/sample.jpg');
 	background-repeat: no-repeat;
   background-position: center top;
+  background-size: cover;
 }
 
 .overlay {
